--- a/css/index.css
+++ b/css/index.css
@@ -1,127 +1,127 @@
 @import "https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap";
 
 * {
-  margin:0;
-  padding:0;
+margin:0;
+padding:0;
 }
 
 ul li {
-  display: inline-block;
-  color:#606060;
+display:inline-block;
+color:#606060;
 }
 
 #top-bar {
-  width:100%;
-  height:50px;
-  background-color:#f1f1f1;
-  font-family:"Open sans",sans-serif;
+width:100%;
+height:50px;
+background-color:#f1f1f1;
+font-family:"Open sans",sans-serif;
 }
 
 /* bandeira da top-bar */
 .container-bandeira-brasil {
-  height:auto;
-  width:auto;
-  float:left;
-  display:flex;
-  align-items:center;
+height:auto;
+width:auto;
+float:left;
+display:flex;
+align-items:center;
 }
 
 .bandeira-brasil {
-  height:40px;
+height:40px;
 }
 
 #lista-bandeira-brasil {
-  height:50px;
-  display:flex;
-  align-items:center;
-  border-right:3px solid #dfdfdf;
+height:50px;
+display:flex;
+align-items:center;
+border-right:3px solid #dfdfdf;
 }
 
 [alt="bandeira-brasil"] {
-  width:40px;
+width:40px;
 }
 
 .bandeira-brasil ul li {
-  padding:0 5px;
+padding:0 5px;
 }
 
 /* bandeira da top-bar - fim*/
+
 /* itens do top bar lateral direito  */
 .container-menu {
-  height:auto;
-  width:auto;
-  float:right;
+height:auto;
+width:auto;
+float:right;
 }
 
 .menu {
-  height:50px;
+height:50px;
 }
 
 #coronavirus {
-  color:red;
-  border-left:3px solid #dfdfdf;
+color:red;
+border-left:3px solid #dfdfdf;
 }
 
 .menu ul {
-  display:flex;
-  height:100%;
+display:flex;
+height:100%;
 }
 
 .menu ul li {
-  height:100%;
-  font-weight:700;
-  border-right:3px solid #dfdfdf;
-  padding:0 10px;
-  display:flex;
-  align-items:center;
+height:100%;
+font-weight:700;
+border-right:3px solid #dfdfdf;
+padding:0 10px;
+display:flex;
+align-items:center;
 }
 
 [alt="Libras"] {
-  width:40px;
+width:40px;
 }
 
 /* itens do top bar lateral direito  */
 
 /*Logo principal do site*/
 .logo {
-  width: 100%;
-  height: 146px;
-  background-image: radial-gradient(ellipse at center,#19882C 1%,#025310 100%);
-  display: flex;
-  align-items: center;
+width:100%;
+height:146px;
+background-image:radial-gradient(ellipse at center,#19882C 1%,#025310 100%);
+display:flex;
+align-items:center;
 }
 
 .logo ul {
-  display: block;
+display:block;
 }
 
-.logo ul li{
-  padding-left: 10px;
-  font-family:"Open sans",sans-serif;
-  color: #ffff;
+.logo ul li {
+padding-left:10px;
+font-family:"Open sans",sans-serif;
+color:#ffff;
 }
 
 #header-logo {
-  font-size: 40px;
-  font-weight: 800;
+font-size:40px;
+font-weight:800;
 }
+
 /*Logo principal do site*/
 
 /*Selecionador do curso*/
-#selecionador-matrícula{
-  background-color: #00420c;
+#selecionador-matrícula {
+background-color:#00420c;
 }
 
-.opcoes-selecionador
-{
-  color:#606060;
-  font-family:"Open sans",sans-serif;
-  font-weight: bold;
-  border-radius: 3px;
+.opcoes-selecionador {
+color:#606060;
+font-family:"Open sans",sans-serif;
+font-weight:700;
+border-radius:3px;
 }
 
-#form-selecionado-matricula
-{
-  padding: 5px 10px;
+#form-selecionado-matricula {
+padding:5px 10px;
 }
 /*Selecionador do curso*/
