--- a/css/index.css
+++ b/css/index.css
@@ -15,15 +15,16 @@ width:100%;
 height:50px;
 background-color:#f1f1f1;
 font-family:"Open sans",sans-serif;
-}
+display: flex;
+justify-content: space-between;
 
+}
+/*justify-content: flex-start | flex-end | center | space-between | space-around | space-evenly;*/
 /* bandeira da top-bar */
 .container-bandeira-brasil {
 height:auto;
 width:auto;
-float:left;
-display:flex;
-align-items:center;
+border-right:3px solid #dfdfdf;
 }
 
 .bandeira-brasil {
@@ -34,7 +35,7 @@ height:40px;
 height:50px;
 display:flex;
 align-items:center;
-border-right:3px solid #dfdfdf;
+
 }
 
 [alt="bandeira-brasil"] {
@@ -122,3 +123,7 @@ border-radius:3px;
 padding:5px 10px;
 }
 /*Selecionador do curso*/
+
+
+
+
