--- a/css/index.css
+++ b/css/index.css
@@ -5,13 +5,14 @@ margin:0;
 padding:0;
 }
 
-/*=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-*/
-/*top-bar - começo*/
-.desativador-estilo-link{
-	text-decoration: none;
-	color: #606060;
+body {
+overflow-x:hidden;
 }
 
+.desativador-estilo-link {
+text-decoration:none;
+color:#606060;
+}
 
 #top-bar {
 width:100%;
@@ -22,7 +23,6 @@ display:flex;
 justify-content:space-between;
 }
 
-/*Bandeira brasil - começo*/
 .bandeira-lista-brasil {
 height:50px;
 width:auto;
@@ -37,14 +37,12 @@ padding:5px 10px;
 }
 
 .lista-bandeira-brasil {
-text-decoration: none;
+text-decoration:none;
 list-style:none;
 font-weight:700;
 padding-right:10px;
 }
 
-/*Bandeira brasil - fim*/
-/*Texto lateral da bandeira - começo*/
 .menu {
 height:50px;
 }
@@ -67,9 +65,6 @@ align-items:center;
 border-left:3px solid #dfdfdf;
 }
 
-/*Texto lateral da bandeira - fim*/
-/*top-bar - fim*/
-/*Logo principal do site*/
 .logo {
 width:100%;
 height:146px;
@@ -90,8 +85,6 @@ font-size:40px;
 font-weight:800;
 }
 
-/*Logo principal do site*/
-/*Selecionador do curso*/
 #selecionador-matrícula {
 background-color:#00420c;
 }
@@ -109,19 +102,15 @@ border-radius:3px;
 #form-selecionado-matricula {
 padding:5px 10px;
 }
-/*Selecionador do curso*/
-/*=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-*/
-/*principal inicio*/
-/*inicio - container geral*/
+
 .container-main {
 display:flex;
 justify-content:flex-start;
 }
-/*fim - container geral*/
 
-/*Menu lateral - inicio*/
 .lateral-esquerda {
-width:16%;
+min-width:130px;
+max-width:16%;
 margin-top:20px;
 margin-left:10px;
 }
@@ -138,7 +127,7 @@ border-top:4px solid #00510f;
 padding:8px 8px 24px 10px;
 color:#035312;
 font-family:"Open sans",sans-serif;
-font-size: 16px;
+font-size:16px;
 }
 
 #lista-menu {
@@ -146,7 +135,6 @@ list-style:none;
 }
 
 .item-lista-menu {
-/*Apenas para padronizar o estilo*/
 text-decoration:none;
 font-family:"Open sans",sans-serif;
 color:#000;
@@ -161,36 +149,39 @@ text-decoration:underline;
 border-bottom:1px solid #dfdfdf;
 padding:4px;
 }
-/*Menu lateral - fim*/
 
-/*principal fim*/
-.wrapper-meio 
-{
-	width: 42%;
-	height: auto;
-	margin: 15px 0px 0px 30px;
-}
-.conteudo-meio
-{
-	margin-top: 10px;
-	line-height: 1.42857143;
-	font-family: "Open Sans", Arial, Helvetica, sans-serif;
+.wrapper-meio {
+width:42%;
+height:auto;
+margin:15px 0 0 30px;
 }
 
-.conteudo-meio p 
-{
-	margin: 0 0 1em 0;
+.conteudo-meio {
+margin-top:10px;
+line-height:1.42857143;
+font-family:"Open Sans",Arial,Helvetica,sans-serif;
 }
 
-.link-paragrafo
-{
-	color: #3f81bb;
-	text-decoration: none;
-}
-.link-paragrafo:hover
-{
-	text-decoration: underline;
+.conteudo-meio p {
+margin:0 0 1em;
 }
 
+.link-paragrafo {
+color:#3f81bb;
+text-decoration:none;
+}
 
+.link-paragrafo:hover {
+text-decoration:underline;
+}
+
+.wrapper-barra-rodape {
+position:fixed;
+z-index:100;
+bottom:0;
+left:0;
+width:100%;
+height:50px;
+background-color:#000;
+}
 
