--- a/css/index.css
+++ b/css/index.css
@@ -113,8 +113,7 @@ justify-content:flex-start;
 }
 
 .lateral-esquerda {
-min-width:130px;
-max-width:16%;
+width: 16%;
 margin-top:20px;
 margin-left:10px;
 }
@@ -131,7 +130,7 @@ border-top:4px solid #00510f;
 padding:8px 8px 24px 10px;
 color:#035312;
 font-family:"Open sans",sans-serif;
-font-size:16px;
+font-size:20px;
 }
 
 #lista-menu {
